Test/typing/should_fail/for_no_init_statement.java
public class MyClass {
    public static void main(String args[]) {
        int i;
        for (i; i < 2; i++) {
            int x = i;
        }
    }
}